--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -14,6 +14,7 @@ guardar=Guardar
 eliminar=Eliminar
 
 
+
 # Application 
 ordenVacio = Introduzca una orden
 ordenesPreventivas=Ordenes preventivas
@@ -107,6 +108,11 @@ anexos=Anexos
 finalizarOrden=Finalizar orden
 motivo=Motivo
 almacen=Almacén
-
+tareas_realizadas = Tareas realizadas
 # Placeholders
 seleccioneFecha=Seleccione una fecha...
+
+CAUSA=Causa
+CODIFICACION=Codificación
+PARTE_DAÑADA=Parte dañada
+SINTOMAS_AV=Sintoma avería
